Fix: made p tag title more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,7 +390,7 @@ table, th {
 }
 
 .title p {
-    color: #666;
+    color: #afbac4;
 }
 
 .title.title-white h2 {
